--- a/Assets/UI/GameScreen/GameScreen.uss
+++ b/Assets/UI/GameScreen/GameScreen.uss
@@ -13,5 +13,8 @@
 }
 
 .btn-restart {
-    width: 250px
+    width: 250px;
+    height: 100px;
+    font-size: 32px;
+    -unity-font-style: bold;
 }
