--- a/Assets/Scripts/UI/GameScreen/GameScreen.uss
+++ b/Assets/Scripts/UI/GameScreen/GameScreen.uss
@@ -1,9 +1,34 @@
 :root {
-    flex-direction: row;
+    flex-direction: column;
     width: 100%;
     height: 100%;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header {
+    width: 100%;
+    flex-direction: row;
     justify-content: flex-end;
-    align-items: flex-end;
+    align-items: center;
+    padding: 10px;
+    font-size: 10px;
+}
+
+.points-container {
+    flex-direction: row;
+    align-items: center;
+}
+
+.points-image {
+    background-image: url('/Assets/UI/Images/star.png');
+    width: 24px;
+    height: 24px;
+}
+
+.points-label {
+    color: rgb(255, 255, 255);
+    font-size: 16px;
 }
 
 .footer {
@@ -11,8 +36,8 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    margin: 20px;
-    font-size: 20px;
+    padding: 10px;
+    font-size: 10px;
 }
 
 .button {
